Open Vehicle Monitor System v3 - Change log

????-??-?? ???  ???????  OTA release
- MG:
  Add new vehicle MG4
  Supports Short, Medium and Long Range Variants
- Implement custom CLI commands with Duktape function OvmsCommand.Register()
- Support for *,? wildcards in vfs ls and vfs rls commands.
- Smart EQ 453:
    add 5min Booster preheat cool
    add TPMS pressure
    add Internal Temp
    add Doors status
    add Charging Metrics
- Support for completion in vfs commands.
- Separate Polling from the Vehicle implementation
  New commands:
    poller status
    poller pause
    poller resume
    poller trace on|txrx|all|off|status-- Control verbose logging
    poller times on|off|status|reset   -- Control poller timing metrics
  Duktape Support:
    OvmsPoller.GetPaused
    OvmsPoller.GetUserPaused
    OvmsPoller.Pause
    OvmsPoller.Resume
    OvmsPoller.Trace
    OvmsPoller.GetTraceStatus
    OvmsPoller.Times.Start
    OvmsPoller.Times.Stop
    OvmsPoller.Times.Reset
    OvmsPoller.Times.GetStatus
- Duktape support for Metric Age / Stale
  New Duktape methods
    OvmsMetrics.IsStale
    OmvsMetrics.IsFresh
    OvmsMetrics.Age
2024-03-23 MB   3.3.004  OTA release
- MG EV Added support for MG5 (2020 - 2023) Short Range
- MG EV Added support for MG ZS EV (2023 - ) and MG5 (2020 - 2023) Long Range
- OVMS Server v3 metrics filtering
  New configs:
    [server.v3] metrics.include         -- Comma-separated list of metric names (with possible wildcard) matching metrics to send
    [server.v3] metrics.exclude         -- Comma-separated list of metric names (with possible wildcard) matching metrics to not send
- Renault Zoe Phase 2: Initial support
- Improved output of bms shell command for narrow windows.
  New commands:
    bms volt                            -- Output only voltage info if available
    bms temp                            -- Output only temperature info if available
- Hyundai Ioniq 5: Initial support
- Support for specifying units in scripts