@@ -1,6 +1,16 @@
 Open Vehicle Monitor System v3 - Change log
 
 ????-??-?? ???  ???????  OTA release
+- Cellular: receive & send SMS, forward SMS & USSD to user. Note: no system notification
+  support (and not planned), this is primarily meant to forward provider info only
+  sent via SMS or USSD or expected to be received via SMS.
+  New events:
+    system.modem.received.sms
+  New notifications:
+    [info] modem.received.sms
+    [info] modem.received.ussd
+  New commands:
+    cellular sendsms <receiver> <text> [<text>…]
 - MG:
   Add new vehicle MG4
   Supports Short, Medium and Long Range Variants
@@ -36,6 +46,8 @@ Open Vehicle Monitor System v3 - Change log
     OvmsMetrics.IsStale
     OmvsMetrics.IsFresh
     OvmsMetrics.Age
+
+
 2024-03-23 MB   3.3.004  OTA release
 - MG EV Added support for MG5 (2020 - 2023) Short Range
 - MG EV Added support for MG ZS EV (2023 - ) and MG5 (2020 - 2023) Long Range
